[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/pocket_ad/font/SC-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/pocket_ad/PocketADMain.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=3]
extra_spacing_top = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Label" type="RichTextLabel" parent="."]
margin_left = 718.0
margin_right = 1019.0
margin_bottom = 588.0
custom_fonts/mono_font = SubResource( 3 )
custom_fonts/bold_italics_font = SubResource( 3 )
custom_fonts/italics_font = SubResource( 3 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "使用教程：
1->点击检测模板。检测是否安装导入模板。
2->插件会自动复制到对应文件加。
3->点击激活后会检测配置文件，按照对应提示修改即可。
4->最后重新启动编辑器即可"
text = "使用教程：
1->点击检测模板。检测是否安装导入模板。
2->插件会自动复制到对应文件加。
3->点击激活后会检测配置文件，按照对应提示修改即可。
4->最后重新启动编辑器即可"

[node name="Label2" type="RichTextLabel" parent="."]
margin_left = 268.0
margin_right = 693.0
margin_bottom = 600.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "输出日志："
text = "输出日志："
scroll_following = true

[node name="Label3" type="Label" parent="."]
margin_right = 236.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 4 )
text = "请按照教程点击以下按钮
"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_bottom = 1.0
margin_top = 50.0
margin_right = 236.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 236.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
text = "检测模板"

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 236.0
margin_bottom = 104.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "安装广告插件"

[node name="Button3" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 236.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "激活广告插件"

[node name="Control" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 236.0
margin_bottom = 274.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Control"]
margin_right = 236.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 5 )
editable = false
placeholder_text = "请输入渠道"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/Control"]
margin_top = 31.0
margin_right = 236.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 5 )
editable = false
placeholder_text = "请输入口袋工厂APPID"

[node name="Button4" type="Button" parent="VBoxContainer/Control"]
margin_top = 62.0
margin_right = 236.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "配置插件渠道与ID"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/Control/Button4" to="." method="_on_Button4_pressed"]
